--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Digiprojekti XDDDDDDDDDDDDDD TYHÄM</title>
+    <title>Digiprojekti</title>
   </head>
 
   <body>
@@ -23,7 +23,7 @@
 
     <form>
 
-        <h4>Oletko käyttänyt etäopiskelu alustaa?</h4>
+        <h4>Oletko käyttänyt etäopiskelualustoja?</h4>
         <input type="radio" />
         <label>Kyllä</label><br />
         <input type="radio" />
