--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <label>En</label>
 
     <br /> <br />
-      <h4>Mitä palvelua/alustaa käytätte etäopiskelussa (esim. Adobe Connect, Teams, Zoom)</h4>
+      <h4>Mitä palvelua/alustaa käytätte etäopiskelussa (esim. Adobe Connect, Teams, Zoom)?</h4>
       <input type="checkbox" id="male" name="gender" value="male" />
       <label for="male">Adobe connect</label><br />
       <input type="checkbox" id="female" name="gender" value="female" />
@@ -42,7 +42,7 @@
 
       <br /> <br />
 
-            <p>- Mitä palvelua/alustaa käytätte etäopiskelussa (esim. Adobe Connect, Teams, Zoom)</p>
+            <p>- Mitä palvelua/alustaa käytätte etäopiskelussa (esim. Adobe Connect, Teams, Zoom)?</p>
             <input type="checkbox" id="male" name="gender" value="male" />
             <label for="male">Adobe connect</label><br />
             <input type="checkbox" id="female" name="gender" value="female" />
